SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Account_Assignment_Category2__c.field-meta.xml
<CustomField>
        <fullName>Account_Assignment_Category2__c</fullName>
        <label>Account Assignment Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                    <default>true</default>
                    <label>S</label>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>