SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>