SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Campaign_Balance__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Balance__c</fullName>
        <formula>Campaign__r.CampaignBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>