SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Campaign_Balance_Available__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Balance_Available__c</fullName>
        <formula>IF(AND(PR_Header_Status__c='New',PR_Amount__c &gt; Campaign_Balance__c),
IMAGE("/resource/1575356823000/Cross_Mark", "Cross_Mark",20,20),
IMAGE("/resource/1575356771000/Checked_Tick", "Checked_Tick",20,20)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Balance Available?</label>
        <type>Text</type>
    </CustomField>