SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Campaign_Spend_Status__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Spend_Status__c</fullName>
        <formula>IF(Phasing_Records_Count__c&gt;0 &amp;&amp; Phasing_Without_Campaign_Spend__c = 0,
 IMAGE("/resource/1575356771000/Checked_Tick", "Checked_Tick",20,20),
 IMAGE("/resource/1575356823000/Cross_Mark", "Cross_Mark",20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Spend Status</label>
        <type>Text</type>
    </CustomField>