SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Company_Code_Status__c.field-meta.xml
<CustomField>
        <fullName>Company_Code_Status__c</fullName>
        <formula>IF(SAP_Company_Code_Matching__c,
IMAGE("/resource/1575356771000/Checked_Tick", "Checked_Tick",20,20),
IMAGE("/resource/1575356823000/Cross_Mark", "Cross_Mark",20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code Status</label>
        <type>Text</type>
    </CustomField>