SFUSA/force-app/main/default/objects/PR_Detail__c/fields/End_Date__c.field-meta.xml
<CustomField>
        <fullName>End_Date__c</fullName>
        <description>Field to capture the end day of the month for Start month picklist. User for backend validation</description>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>