SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Filter_Text__c.field-meta.xml
<CustomField>
        <fullName>Filter_Text__c</fullName>
        <description>This field is used to filter the grid</description>
        <formula>IF(AND(OverAll_Status__c,Approved__c),
'Success',
'Errored  RedX Failed'
)</formula>
        <label>Filter Text</label>
        <type>Text</type>
    </CustomField>