SFUSA/force-app/main/default/objects/PR_Detail__c/fields/GL_Code2__c.field-meta.xml
<CustomField>
        <fullName>GL_Code2__c</fullName>
        <label>GL Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GLDescription2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15301</fullName>
                </value>
                <value>
                    <fullName>15302</fullName>
                </value>
                <value>
                    <fullName>15303</fullName>
                </value>
                <value>
                    <fullName>15304</fullName>
                </value>
                <value>
                    <fullName>15305</fullName>
                </value>
                <value>
                    <fullName>15306</fullName>
                </value>
                <value>
                    <fullName>15307</fullName>
                </value>
                <value>
                    <fullName>15308</fullName>
                </value>
                <value>
                    <fullName>15309</fullName>
                </value>
                <value>
                    <fullName>15310</fullName>
                </value>
                <value>
                    <fullName>15311</fullName>
                </value>
                <value>
                    <fullName>15312</fullName>
                </value>
                <value>
                    <fullName>15313</fullName>
                </value>
                <value>
                    <fullName>15317</fullName>
                </value>
                <value>
                    <fullName>15318</fullName>
                </value>
                <value>
                    <fullName>15319</fullName>
                </value>
                <value>
                    <fullName>15320</fullName>
                </value>
                <value>
                    <fullName>15321</fullName>
                </value>
                <value>
                    <fullName>15322</fullName>
                </value>
                <value>
                    <fullName>15323</fullName>
                </value>
                <value>
                    <fullName>15324</fullName>
                </value>
                <value>
                    <fullName>15325</fullName>
                </value>
                <value>
                    <fullName>15326</fullName>
                </value>
                <value>
                    <fullName>15327</fullName>
                </value>
                <value>
                    <fullName>15328</fullName>
                </value>
                <value>
                    <fullName>15329</fullName>
                </value>
                <value>
                    <fullName>15330</fullName>
                </value>
                <value>
                    <fullName>15331</fullName>
                </value>
                <value>
                    <fullName>15332</fullName>
                </value>
                <value>
                    <fullName>15333</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>