SFUSA/force-app/main/default/objects/PR_Detail__c/fields/GL_Code_Description__c.field-meta.xml
<CustomField>
        <fullName>GL_Code_Description__c</fullName>
        <label>GL Code Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Education – Heritage Center and Distillery Visits</fullName>
                </value>
                <value>
                    <fullName>Off-Trade – Display Installations</fullName>
                </value>
                <value>
                    <fullName>On-Trade – Display Installations</fullName>
                </value>
                <value>
                    <fullName>Sponsorship – Attitudinal Sponsorship Contract Fee</fullName>
                </value>
                <value>
                    <fullName>Sponsorship – Experiential Sponsorship Contract Fee</fullName>
                </value>
                <value>
                    <fullName>Sponsorship - Attitudinal Sponsorship Execution</fullName>
                </value>
                <value>
                    <fullName>Sponsorship - Experiential Sponsorship Execution</fullName>
                </value>
                <value>
                    <fullName>Off-Trade – Consumer Promotions - Print, Digital POS and Fulfillment Services</fullName>
                </value>
                <value>
                    <fullName>On-Trade – Consumer Promotions - Print, Digital POS and Fulfillment Services</fullName>
                </value>
                <value>
                    <fullName>Execution – Consumer Experience &amp; Personalization</fullName>
                </value>
                <value>
                    <fullName>Execution – Non-Premise and Consumer Influencer Program</fullName>
                </value>
                <value>
                    <fullName>Execution – Non-Premise and Trade Influencer Program</fullName>
                </value>
                <value>
                    <fullName>Off-Trade – Consumer Promotions - POS Materials</fullName>
                </value>
                <value>
                    <fullName>On-Trade – Consumer Promotions - POS Materials</fullName>
                </value>
                <value>
                    <fullName>Off-Trade – Value Added Packaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>