SFUSA/force-app/main/default/objects/PR_Detail__c/fields/GL_Comments__c.field-meta.xml
<CustomField>
        <fullName>GL_Comments__c</fullName>
        <inlineHelpText>Please populate this field if "Other" option is chosen in GL Detail</inlineHelpText>
        <label>GL Comments</label>
        <type>TextArea</type>
    </CustomField>