SFUSA/force-app/main/default/objects/PR_Detail__c/fields/GLAccountType__c.field-meta.xml
<CustomField>
        <fullName>GLAccountType__c</fullName>
        <label>GL Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Brand Investment</fullName>
                </value>
                <value>
                    <fullName>Ad Production</fullName>
                </value>
                <value>
                    <fullName>Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Agency OOP</fullName>
                </value>
                <value>
                    <fullName>BI - FX</fullName>
                </value>
                <value>
                    <fullName>BI - I/C Rebill</fullName>
                </value>
                <value>
                    <fullName>Brand Education</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Off-Trade</fullName>
                </value>
                <value>
                    <fullName>On-Trade</fullName>
                </value>
                <value>
                    <fullName>Other Brand Investment</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Non-Premise</fullName>
                </value>
                <value>
                    <fullName>Digital Rebates</fullName>
                    <isActive>false</isActive>
                    <label>Digital Rebates</label>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                    <isActive>false</isActive>
                    <label>Incentives</label>
                </value>
                <value>
                    <fullName>Misc</fullName>
                    <isActive>false</isActive>
                    <label>Misc</label>
                </value>
                <value>
                    <fullName>Non Working</fullName>
                    <isActive>false</isActive>
                    <label>Non Working</label>
                </value>
                <value>
                    <fullName>Off Premise</fullName>
                    <isActive>false</isActive>
                    <label>Off Premise</label>
                </value>
                <value>
                    <fullName>On Premise</fullName>
                    <isActive>false</isActive>
                    <label>On Premise</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                    <isActive>false</isActive>
                    <label>Working</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>