SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Hidden_Edit__c.field-meta.xml
<CustomField>
        <fullName>Hidden_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to toogle the Edit or view mode in pr detail edit table</description>
        <label>Hidden Edit</label>
        <type>Checkbox</type>
    </CustomField>