SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Phasing_Amount__c.field-meta.xml
<CustomField>
        <fullName>Phasing_Amount__c</fullName>
        <description>Rollup of all phasing records amount</description>
        <label>Phasing Amount</label>
        <summarizedField>PR_Phasing__c.Phasing_Amount__c</summarizedField>
        <summaryForeignKey>PR_Phasing__c.PR_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>