SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Phasing_Records_Count__c.field-meta.xml
<CustomField>
        <fullName>Phasing_Records_Count__c</fullName>
        <label># Phasing Records Count</label>
        <summaryForeignKey>PR_Phasing__c.PR_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>